--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,31 +25,60 @@
             height: 2px;
             background-color: #3b82f6; /* Blue underline */
         }
+        /* Mobile menu specific styles */
+        .mobile-menu-open {
+            display: block;
+        }
     </style>
 </head>
 <body class="antialiased">
     <div class="min-h-screen flex flex-col">
         <!-- Header/Navbar -->
-        <header class="p-6 md:p-8 flex justify-between items-center text-white">
+        <header class="p-6 md:p-8 flex justify-between items-center text-white relative z-50">
             <h1 class="text-3xl font-extrabold text-white tracking-wide">Cyberwyse.co.uk</h1>
+            <!-- Desktop Navigation -->
             <nav class="hidden md:flex space-x-8 text-lg">
-                <a href="#" class="hover:text-blue-500 transition-colors duration-300">Services</a>
-                <a href="#" class="hover:text-blue-500 transition-colors duration-300">About</a>
-                <a href="#" class="hover:text-blue-500 transition-colors duration-300">Contact</a>
+                <a href="#pen-test-as-a-service" class="hover:text-blue-500 transition-colors duration-300">Services</a>
+                <a href="#about" class="hover:text-blue-500 transition-colors duration-300">About</a>
+                <a href="#contact" class="hover:text-blue-500 transition-colors duration-300">Contact</a>
             </nav>
             <!-- Mobile Menu button -->
-            <button class="md:hidden text-white focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <button id="mobile-menu-button" class="md:hidden text-white focus:outline-none">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
                 </svg>
             </button>
         </header>
 
+        <!-- Mobile Menu (initially hidden) -->
+        <div id="mobile-menu" class="hidden md:hidden absolute top-0 left-0 w-full h-screen bg-gray-900 bg-opacity-95 text-white flex flex-col items-center justify-center space-y-8 z-40">
+            <button id="close-menu-button" class="absolute top-8 right-8 text-white focus:outline-none">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </button>
+            <a href="#pen-test-as-a-service" class="text-3xl hover:text-blue-500 transition-colors duration-300" onclick="document.getElementById('mobile-menu').classList.add('hidden')">Services</a>
+            <a href="#about" class="text-3xl hover:text-blue-500 transition-colors duration-300" onclick="document.getElementById('mobile-menu').classList.add('hidden')">About</a>
+            <a href="#contact" class="text-3xl hover:text-blue-500 transition-colors duration-300" onclick="document.getElementById('mobile-menu').classList.add('hidden')">Contact</a>
+        </div>
+
         <!-- Main Content Area -->
         <main class="flex-grow container mx-auto p-6 md:p-12 space-y-20">
 
+            <!-- Intro Section (New) -->
+            <div id="intro" class="flex flex-col lg:flex-row items-center lg:justify-between space-y-8 lg:space-y-0 lg:space-x-12">
+                <div class="w-full lg:w-2/3">
+                    <h2 class="text-4xl sm:text-5xl font-extrabold text-white leading-tight mb-4">
+                        Comprehensive Penetration Testing, Powered by Expertise
+                    </h2>
+                    <p class="text-lg text-gray-400">
+                        At Cyberwyse, our approach to penetration testing goes beyond automated scans and generic reports. We believe in a hands-on, methodical process that simulates real-world threats to uncover deep-seated vulnerabilities. Our team of certified ethical hackers leverages years of experience to provide a holistic view of your security posture, ensuring you're not just compliant, but truly resilient. From initial reconnaissance to post-engagement support, we are your partner in building a safer digital environment.
+                    </p>
+                </div>
+            </div>
+
             <!-- Penetration Testing as a Service Section -->
-            <div class="flex flex-col lg:flex-row items-start lg:space-x-12">
+            <div id="pen-test-as-a-service" class="flex flex-col lg:flex-row items-start lg:space-x-12">
                 <div class="w-full lg:w-1/3 mb-10 lg:mb-0">
                     <h2 class="text-4xl sm:text-5xl font-extrabold text-white leading-tight mb-4">
                         Penetration Testing as a Service
@@ -58,7 +87,7 @@
                         We offer a continuous and scalable approach to security testing, integrating seamlessly into your development lifecycle.
                     </p>
                 </div>
-                <div class="w-full lg:w-2/3">
+                <div class="w-full lg:w-2/3 p-8 bg-gray-800 rounded-2xl shadow-xl border border-gray-700">
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-gray-300">
                         <div class="flex items-center space-x-2">
                             <span class="text-blue-500 text-lg">&bull;</span>
@@ -101,7 +130,7 @@
             </div>
 
             <!-- Detailed Penetration Testing Section -->
-            <div class="flex flex-col lg:flex-row-reverse items-start lg:space-x-reverse lg:space-x-12">
+            <div id="detailed-pen-test" class="flex flex-col lg:flex-row-reverse items-start lg:space-x-reverse lg:space-x-12">
                 <div class="w-full lg:w-1/3 mb-10 lg:mb-0 text-right">
                     <h2 class="text-4xl sm:text-5xl font-extrabold text-white leading-tight mb-4">
                         Penetration Testing Services
@@ -168,9 +197,8 @@
                 </div>
             </div>
 
-            <!-- Existing lists from previous versions -->
             <!-- Penetration Testing Types Section -->
-            <div class="flex flex-col lg:flex-row items-start lg:space-x-12">
+            <div id="pen-test-types" class="flex flex-col lg:flex-row items-start lg:space-x-12">
                 <div class="w-full lg:w-1/3 mb-10 lg:mb-0">
                     <h2 class="text-4xl sm:text-5xl font-extrabold text-white leading-tight mb-4">
                         Penetration Testing Types
@@ -179,7 +207,7 @@
                         Our comprehensive penetration testing services cover a wide range of attack vectors to identify and mitigate vulnerabilities.
                     </p>
                 </div>
-                <div class="w-full lg:w-2/3">
+                <div class="w-full lg:w-2/3 p-8 bg-gray-800 rounded-2xl shadow-xl border border-gray-700">
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-gray-300">
                         <div class="flex items-center space-x-2">
                             <span class="text-blue-500 text-lg">&bull;</span>
@@ -242,7 +270,7 @@
             </div>
 
             <!-- Social Engineering Section -->
-            <div class="flex flex-col lg:flex-row-reverse items-start lg:space-x-reverse lg:space-x-12">
+            <div id="social-engineering" class="flex flex-col lg:flex-row-reverse items-start lg:space-x-reverse lg:space-x-12">
                 <div class="w-full lg:w-1/3 mb-10 lg:mb-0 text-right">
                     <h2 class="text-4xl sm:text-5xl font-extrabold text-white leading-tight mb-4">
                         Social Engineering Types
@@ -251,7 +279,7 @@
                         Our social engineering assessments test the human element of security, from digital manipulation to physical intrusion.
                     </p>
                 </div>
-                <div class="w-full lg:w-2/3">
+                <div class="w-full lg:w-2/3 p-8 bg-gray-800 rounded-2xl shadow-xl border border-gray-700">
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-gray-300">
                         <div class="flex items-center space-x-2">
                             <span class="text-blue-500 text-lg">&bull;</span>
@@ -274,7 +302,7 @@
             </div>
 
             <!-- Cybersecurity Consulting Section -->
-            <div class="flex flex-col lg:flex-row items-start lg:space-x-12">
+            <div id="cyber-consulting" class="flex flex-col lg:flex-row items-start lg:space-x-12">
                 <div class="w-full lg:w-1/3 mb-10 lg:mb-0">
                     <h2 class="text-4xl sm:text-5xl font-extrabold text-white leading-tight mb-4">
                         Cybersecurity Consulting
@@ -283,7 +311,7 @@
                         From strategy to implementation, our consulting services help you build a resilient and proactive security posture.
                     </p>
                 </div>
-                <div class="w-full lg:w-2/3">
+                <div class="w-full lg:w-2/3 p-8 bg-gray-800 rounded-2xl shadow-xl border border-gray-700">
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-gray-300">
                         <div class="flex items-center space-x-2">
                             <span class="text-blue-500 text-lg">&bull;</span>
@@ -314,7 +342,7 @@
             </div>
 
             <!-- Compliance Pentesting Section -->
-            <div class="flex flex-col lg:flex-row-reverse items-start lg:space-x-reverse lg:space-x-12">
+            <div id="compliance-pentesting" class="flex flex-col lg:flex-row-reverse items-start lg:space-x-reverse lg:space-x-12">
                 <div class="w-full lg:w-1/3 mb-10 lg:mb-0 text-right">
                     <h2 class="text-4xl sm:text-5xl font-extrabold text-white leading-tight mb-4">
                         Compliance Pentesting
@@ -323,7 +351,7 @@
                         Ensure your organization meets regulatory requirements with our compliance-focused penetration testing services.
                     </p>
                 </div>
-                <div class="w-full lg:w-2/3">
+                <div class="w-full lg:w-2/3 p-8 bg-gray-800 rounded-2xl shadow-xl border border-gray-700">
                     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 text-gray-300">
                         <div class="flex items-center space-x-2">
                             <span class="text-blue-500 text-lg">&bull;</span>
@@ -374,5 +402,22 @@
             </div>
         </main>
     </div>
+
+    <script>
+        // Get the button and the menu elements
+        const mobileMenuButton = document.getElementById('mobile-menu-button');
+        const closeMenuButton = document.getElementById('close-menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        // Add an event listener to the burger button
+        mobileMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.remove('hidden');
+        });
+
+        // Add an event listener to the close button
+        closeMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.add('hidden');
+        });
+    </script>
 </body>
 </html>
